change wm_action key names to match the full key sequences bound to

--- a/media/.mpv/input.conf
+++ b/media/.mpv/input.conf
@@ -84,84 +84,84 @@ r-m ignore
 # r is redraw {{{
 # selection {{{
 # desktops/tmux win
-r-a run bash wm_action mpv a
-r-r run bash wm_action mpv r
-r-s run bash wm_action mpv s
-r-t run bash wm_action mpv t
-r-d run bash wm_action mpv d
-r-h run bash wm_action mpv h
+r-a run bash wm_action mpv ra
+r-r run bash wm_action mpv rr
+r-s run bash wm_action mpv rs
+r-t run bash wm_action mpv rt
+r-d run bash wm_action mpv rd
+r-h run bash wm_action mpv rh
 # windows/tmux pane
-r-n run bash wm_action mpv n
-r-e run bash wm_action mpv e
+r-n run bash wm_action mpv rn
+r-e run bash wm_action mpv re
 # desktops/tmux win
-r-i run bash wm_action mpv i
-r-o run bash wm_action mpv o
+r-i run bash wm_action mpv ri
+r-o run bash wm_action mpv ro
 # last desktop/tmux win
-r-l run bash wm_action mpv l
+r-l run bash wm_action mpv rl
 # last window/tmux pane
-r-u run bash wm_action mpv u
+r-u run bash wm_action mpv ru
 
 # }}}
 
 # move to destkop {{{
-R-a run bash wm_action mpv A
-R-r run bash wm_action mpv R
-R-s run bash wm_action mpv S
-R-t run bash wm_action mpv T
-R-d run bash wm_action mpv D
-R-h run bash wm_action mpv H
-R-n run bash wm_action mpv N
-R-e run bash wm_action mpv E
-R-i run bash wm_action mpv I
-R-o run bash wm_action mpv O
+R-a run bash wm_action mpv Ra
+R-r run bash wm_action mpv Rr
+R-s run bash wm_action mpv Rs
+R-t run bash wm_action mpv Rt
+R-d run bash wm_action mpv Rd
+R-h run bash wm_action mpv Rh
+R-n run bash wm_action mpv Rn
+R-e run bash wm_action mpv Re
+R-i run bash wm_action mpv Ri
+R-o run bash wm_action mpv Ro
 
 #}}}
 
 # moving windows within desktop {{{
 # move to biggest
-r-c-m run bash wm_action mpv cm
+r-c-m run bash wm_action mpv rcm
 # directions
-r-c-h run bash wm_action mpv ch
-r-c-n run bash wm_action mpv cn
-r-c-e run bash wm_action mpv ce
-r-c-i run bash wm_action mpv ci
+r-c-h run bash wm_action mpv rch
+r-c-n run bash wm_action mpv rcn
+r-c-e run bash wm_action mpv rce
+r-c-i run bash wm_action mpv rci
 # cycle window move
-r-. run bash wm_action mpv period
-r-, run bash wm_action mpv comma
+r-. run bash wm_action mpv r.
+r-, run bash wm_action mpv r,
 # desktop balance
-r-b run bash wm_action mpv b
+r-b run bash wm_action mpv rb
 
 # }}}
 
 # resize {{{
-r-m-h run bash wm_action mpv mh
-r-m-n run bash wm_action mpv mn
-r-m-e run bash wm_action mpv me
-r-m-i run bash wm_action mpv mi
+r-m-h run bash wm_action mpv rmh
+r-m-n run bash wm_action mpv rmn
+r-m-e run bash wm_action mpv rme
+r-m-i run bash wm_action mpv rmi
 
 # }}}
 
 # layout {{{
 # monocle toggle
-r-k run bash wm_action mpv k
+r-k run bash wm_action mpv rk
 # sticky toggle
-r-y run bash wm_action mpv y
+r-y run bash wm_action mpv ry
 # for tmux (already have f in gui mpv)
-r-f run bash wm_action mpv f
+r-f run bash wm_action mpv rf
 
 #  }}}
 
 # close
-r-x run bash wm_action mpv x
+r-x run bash wm_action mpv rx
 # new (tmux)
-r-w run bash wm_action mpv w
+r-w run bash wm_action mpv rw
 
 # if running audio in terminal
 # tmux splitting/breaking
-r-/ run bash wm_action mpv slash
-r-' run bash wm_action mpv apos
-# r-- run bash wm_action mpv hyphen
-r-! run bash wm_action mpv bang
+r-/ run bash wm_action mpv r/
+r-' run bash wm_action mpv r'
+# r-- run bash wm_action mpv r-
+r-! run bash wm_action mpv r!
 
 # }}}
 # }}}
