--- a/media/.config/ranger/rc.conf
+++ b/media/.config/ranger/rc.conf
@@ -325,7 +325,7 @@ set hidden_filter ^\.|\.(?:pyc|pyo|bak|swp)$|^lost\+found$|^__(py)?cache__$
 # set show_hidden false
 
 # Ask for a confirmation when running the "delete" command?
-# Valid values are "always" (default), "never", "multiple"
+# Valid values are "always", "never", "multiple" (default)
 # With "multiple", ranger will ask only if you delete multiple files at once.
 set confirm_on_delete multiple
 
@@ -354,10 +354,21 @@ set vcs_backend_git enabled
 set vcs_backend_hg disabled
 set vcs_backend_bzr disabled
 
-# Preview images in full color with the external command "w3mimgpreview"?
-# This requires the console web browser "w3m" and a supported terminal.
-# It has been successfully tested with "xterm" and "urxvt" without tmux.
+# Use one of the supported image preview protocols
 # set preview_images false
+
+# Set the preview image method. Supported methods:
+#
+# * w3m (default):
+#   Preview images in full color with the external command "w3mimgpreview"?
+#   This requires the console web browser "w3m" and a supported terminal.
+#   It has been successfully tested with "xterm" and "urxvt" without tmux.
+#
+# * iterm2:
+#   Preview images in full color using iTerm2 image previews
+#   (http://iterm2.com/images.html). This requires using iTerm2 compiled
+#   with image preview support.
+set preview_images_method w3m
 
 # Use a unicode "..." character to mark cut-off filenames?
 set unicode_ellipsis false
@@ -366,7 +377,7 @@ set unicode_ellipsis false
 set show_hidden_bookmarks true
 
 # Which colorscheme to use? These colorschemes are available by default:
-# default, jungle, snow
+# default, jungle, snow, solarized
 set colorscheme default
 
 # Preview files on the rightmost column?
@@ -450,6 +461,7 @@ set sort natural
 set sort_reverse false
 set sort_case_insensitive true
 set sort_directories_first true
+set sort_unicode false
 
 # Enable this if key combinations with the Alt Key don't work for you.
 # (Especially on xterm)
@@ -469,6 +481,11 @@ set show_selection_in_titlebar true
 # resolution of 100ms. Lower delay reduces lag between directory updates but
 # increases CPU load.
 set idle_delay 2000
+
+# When the metadata manager module looks for metadata, should it only look for
+# a ".metadata.json" file in the current directory, or do a deep search and
+# check all directories above the current one as well?
+set metadata_deep_search false
 # }}}
 # ===================================================================
 # == Local Options# {{{
@@ -527,6 +544,11 @@ map # console shell -p
 # map r chain draw_possible_programs; console open_with
 # map f console find
 map cd console cd
+# Change the line mode
+map Mf linemode filename
+map Mi linemode fileinfo
+map Mp linemode permissions
+map Mt linemode metatitle
 
 # Tagging / Marking
 # map t tag_toggle
@@ -544,7 +566,7 @@ map <F3> display_file
 map <F4> edit
 map <F5> copy
 map <F6> cut
-map <F7> console mkdir
+map <F7> console mkdir%space
 map <F8> console delete
 map <F10> exit
 
@@ -559,7 +581,7 @@ map <PAGEDOWN> move down=1 pages=True
 map <PAGEUP> move up=1 pages=True
 map <CR> move right=1
 # map <DELETE> console delete
-map <INSERT> console touch
+map <INSERT> console touch%space
 
 # VIM-like
 # copymap <UP> k
@@ -621,6 +643,8 @@ map pL paste_symlink relative=True
 map phl paste_hardlink
 map pht paste_hardlinked_subtree
 
+# map dD console delete
+
 map dd cut
 # map ud uncut
 map da cut mode=add
@@ -642,7 +666,7 @@ map yj eval fm.copy(dirarg=dict(down=1), narg=quantifier)
 map yk eval fm.copy(dirarg=dict(up=1), narg=quantifier)
 
 # Searching
-# map / console search
+# map / console search%space
 # map n search_next
 # map N search_next forward=False
 # map ct search_next order=tag
@@ -676,6 +700,7 @@ map <a-9> tab_open 9
 
 # Sorting# {{{
 # map or toggle_option sort_reverse
+# map oz set sort=random
 # map os chain set sort=size;      set sort_reverse=False
 # map ob chain set sort=basename;  set sort_reverse=False
 # map on chain set sort=natural;   set sort_reverse=False
@@ -683,7 +708,8 @@ map <a-9> tab_open 9
 # map oc chain set sort=ctime;     set sort_reverse=False
 # map oa chain set sort=atime;     set sort_reverse=False
 # map ot chain set sort=type;      set sort_reverse=False
-#
+# map oe chain set sort=extension; set sort_reverse=False
+
 # map oS chain set sort=size;      set sort_reverse=True
 # map oB chain set sort=basename;  set sort_reverse=True
 # map oN chain set sort=natural;   set sort_reverse=True
@@ -691,6 +717,7 @@ map <a-9> tab_open 9
 # map oC chain set sort=ctime;     set sort_reverse=True
 # map oA chain set sort=atime;     set sort_reverse=True
 # map oT chain set sort=type;      set sort_reverse=True
+# map oE chain set sort=extension; set sort_reverse=True
 # }}}
 
 map dc get_cumulative_size
@@ -707,7 +734,7 @@ map zP toggle_option preview_directories
 map zs toggle_option sort_case_insensitive
 map zu toggle_option autoupdate_cumulative_size
 map zv toggle_option use_preview_script
-map zf console filter
+map zf console filter%space
 
 # Bookmarks
 map `<any> enter_bookmark %any
