--- a/mail/.muttrc
+++ b/mail/.muttrc
@@ -2,12 +2,12 @@
 # add real delete
 # fix message parsing regex
 # Sources:
-# * http://stevelosh.com/blog/2012/10/the-homely-mutt/#mutt
+# http://stevelosh.com/blog/2012/10/the-homely-mutt/#mutt
 # https://wiki.archlinux.org/index.php/mutt
 # http://www.bartbania.com/index.php/consolify-your-gmail-with-mutt/
 # http://lifehacker.com/5574557/how-to-use-the-fast-and-powerful-mutt-email-client-with-gmail
 
-# Paths# {{{
+# Paths {{{
 # set alias_file       = ~/.mutt/alias
 set header_cache     = ~/.mutt/cache/headers
 set message_cachedir = ~/.mutt/cache/bodies
@@ -25,7 +25,7 @@ set charset = "utf-8"
 # don't pause when displaying messages after expunging or changing folders
 set sleep_time = 0
 # don't ask to press a key
-set wait_key = no
+unset wait_key
 # minimum time between scans; don't check (using mbsync)
 set mail_check = 0
 # don't ask for confirmation to delete mails
@@ -53,21 +53,23 @@ set status_on_top
 # show mutt version at startup
 push <show-version>
 # don't ask to move after reading
-set move = no
+unset move
 # must explicitly use tag-prefix for functions to apply to tagged
 # if set, they will automatically apply to tagged
 unset auto_tag
 # }}}
 
-# Sending Mail (msmtp)# {{{
-# no -a.. will default to default set in rc; but can just change email in header and will use that email instead
+# Sending Mail (msmtp) {{{
+# no -a.. will default to default set in rc (or fail if no default)
+# can just change $from or from email manually in compose
+# will use that email instead with below settings
 set sendmail = 'msmtp'
 
-# Composing#{{{
+# Composing {{{
 # generate from header
-set use_from = yes
+set use_from
 # mutt will pass address in from header (if envelope_from_address is unset and use_envelope_from is set)
-# to $sendmail using the -f switch; not useful if -f switch already set to something; previously called envelope_from
+# to $sendmail (msmtp in this case) using the -f switch; not useful if -f switch already set to something; previously called envelope_from
 unset envelope_from_address
 set use_envelope_from
 # reply to Reply to: field
@@ -75,31 +77,35 @@ set reply_to
 # reply as whomever it was to; overrides from value
 set reverse_name
 # don't ask for cc before opening vim (default)
-set askcc = no
+unset askcc
+# don't add mutt version header to message
+unset user_agent
+# for Message-Id
+unset use_domain
 
-# Use vim as editor; start on line 9; enable spelling
+# use vim as editor; start on line 9; enable spelling
 set editor="vim \"+set spell\" +/^$/ +9"
 # allow editing of headers
 set edit_headers
 
-# Contacts with Abook
-set query_command= "abook --mutt-query '%s'"
-macro index,pager  a "<pipe-message>abook --add-email-quiet<return>" "Add this sender to Abook"
+# contacts with abook
+set query_command="abook --mutt-query '%s'"
+macro index,pager a "<pipe-message>abook --add-email-quiet<return>" "Add this sender to Abook"
 # tab completion for adresses
-bind editor        <Tab> complete-query
+bind editor <Tab> complete-query
 # }}}
 
 # don't put sent messages in sent folder (gmail does)
 unset record
 # don't save copies of outgoing messages
 unset copy
-# very encryption
-set ssl_force_tls = yes
+# very encryption; I'm guessing this only applies when using mutt's sending?
+set ssl_force_tls
 # wait for mail to send before regaining control
 set sendmail_wait = 0
 # }}}
 
-# Accounts# {{{
+# Accounts {{{
 # https://wiki.archlinux.org/index.php/mutt#Multiple_accounts
 ## ACCOUNT1
 source "~/.muttnoctrc"
@@ -114,14 +120,14 @@ folder-hook "~/.mail/school" 'source ~/.muttschoolrc'
 
 # Appearance {{{
 source ~/.mutt/colors.muttrc
-# Sidebar Settings# {{{
+# Sidebar Settings {{{
 source '~/bin/mutt/mutt_sidebar_version.sh|'
 # }}}
-# Status Bar# {{{
+# Status Bar {{{
 set status_chars  = " *%A"
 set status_format = "───[ Folder: %f ]───[%r%m messages%?n? (%n new)?%?d? (%d to delete)?%?t? (%t tagged)? ]───%>─%?p?( %p postponed )?───"
 # }}}
-# Header Options # {{{
+# Header Options {{{
 ignore *
 # show only these headers
 unignore from: to: cc: date: subject:
@@ -129,7 +135,7 @@ unhdr_order *
 # in this order
 hdr_order from: to: cc: date: subject:
 # }}}
-# Index View Options# {{{
+# Index View Options {{{
 # show number intead of "feb"
 set date_format = "%m/%d/%y"
 #https://heipei.net/2009/09/10/mutt-threading-like-a-pro/
@@ -151,7 +157,7 @@ set sort_re
 # regex used to recognize replies when threading
 set reply_regexp = "^(([Rr][Ee]?(\[[0-9]+\])?: *)?(\[[^]]+\] *)?)*"
 # }}}
-# Pager View Options# {{{
+# Pager View Options {{{
 # number of index lines to show when in message
 set pager_index_lines = 4
 set pager_context = 3
@@ -167,7 +173,7 @@ alternative_order text/plain text/enriched text/html
 # automatically convert to plain text when viewing
 auto_view text/html
 # }}}
-# Compose View Options# {{{
+# Compose View Options {{{
 # put -- \n before sig
 set sig_dashes
 # skip compose when replying
@@ -189,7 +195,7 @@ set include
 # }}}
 # }}}
 
-# Bindings# {{{
+# Bindings {{{
 # c to compose; recall postponed or postpone (in compose)
 # P jump to parent thread: parent-message
 # R group-reply
@@ -208,9 +214,8 @@ set include
 # require trash patch
 # macro index,pager y "<enter-command>unset trash\n <delete-message>" "Gmail archive message"
 # macro index,pager td "<enter-command>set trash=\""\n <delete-message>" "Gmail delete message"
-# 
 
-# Pager Key Bindings# {{{
+# Pager Key Bindings {{{
 bind pager gg top
 bind pager G  bottom
 bind pager e  previous-line
@@ -232,13 +237,13 @@ bind compose p postpone-message
 # recall drafts
 bind index p recall-message
 # }}}
-# Tagging# {{{
+# Tagging {{{
 #Select Conversation
 bind generic x tag-entry
 bind index x tag-thread
 bind pager x tag-message
 # }}}
-# Index# {{{
+# Index {{{
 # quit without saving changes
 bind index Q exit
 # toggle whether changes to the mailbox will be written on exit
@@ -291,7 +296,7 @@ bind index \; enter-command
 bind index \: tag-prefix
 
 # }}}
-# Index and Pager# {{{
+# Index and Pager {{{
 # compose a new message
 bind index,pager c mail
 # reply
@@ -307,7 +312,7 @@ bind index,pager S flag-message
 bind pager,index k search-next
 bind pager,index K search-opposite
 # }}}
-# Editor# {{{
+# Editor {{{
 # already bound above
 # bind editor <Tab> complete-query
 # bind editor ^T complete
@@ -321,7 +326,7 @@ macro editor \e "<enter><shell-escape>xsendkey Control+g<enter>"
 bind editor ¸ kill-word
 bind editor <space> noop
 # }}}
-# Attach# {{{
+# Attach {{{
 bind attach s save-entry
 # View attachments properly.
 bind attach <return> view-mailcap
@@ -331,76 +336,63 @@ bind attach <return> view-mailcap
 # Ctrl-R to mark all as read
 # macro index \Cr "T~U<enter><tag-prefix><clear-flag>N<untag-pattern>.<enter>" "mark all messages as read"
 
-# wm experimentation# {{{
-# straight from vimrc; change " to #; nnoremap <silent> to macro index; :silent to "; <cr> to <return>"
-# tmux experimentation#{{{
-# #r# is redraw#{{{
-# window switching#{{{
-macro index,pager ra "!tmux select-window -t 1<return>"
-macro index,pager rr "!tmux select-window -t 2<return>"
-macro index,pager rs "!tmux select-window -t 3<return>"
-macro index,pager rt "!tmux select-window -t 4<return>"
-macro index,pager rd "!tmux select-window -t 5<return>"
-macro index,pager rh "!tmux select-window -t 6<return>"
-macro index,pager rn "!tmux select-window -t 7<return>"
-macro index,pager re "!tmux select-window -t 8<return>"
-macro index,pager ri "!tmux select-window -t 9<return>"
-macro index,pager ro "!tmux select-window -t 10<return>"
-#}}}
-# resize panes#{{{
-macro index,pager rmh "!tmux resize-pane -L 10<return>"
-macro index,pager rmn "!tmux resize-pane -D 10<return>"
-macro index,pager rme "!tmux resize-pane -U 10<return>"
-macro index,pager rmi "!tmux resize-pane -R 10<return>"
-#}}}
+# WM Experimentation {{{
+# make this into a macro if decide to keep?
+# straight from vimrc; change " to #; nnoremap <silent> to macro index,pager; remove :redraw!<cr>; :silent to "; <cr> to <return>"
+# Tmux Experimentation {{{
+# "r" is Redraw {{{
+# window switching {{{
+macro index,pager ra "!wm_action inpt ra<return>"
+macro index,pager rr "!wm_action inpt rr<return>"
+macro index,pager rs "!wm_action inpt rs<return>"
+macro index,pager rt "!wm_action inpt rt<return>"
+macro index,pager rd "!wm_action inpt rd<return>"
+macro index,pager rh "!wm_action inpt rh<return>"
+macro index,pager rn "!wm_action inpt rn<return>"
+macro index,pager re "!wm_action inpt re<return>"
+macro index,pager ri "!wm_action inpt ri<return>"
+macro index,pager ro "!wm_action inpt ro<return>"
+# }}}
+# resize panes {{{
+macro index,pager rmh "!wm_action inpt rmh<return>"
+macro index,pager rmn "!wm_action inpt rmn<return>"
+macro index,pager rme "!wm_action inpt rme<return>"
+macro index,pager rmi "!wm_action inpt rmi<return>"
+# }}}
 # circulate
 # previous
-macro index,pager r, "!tmux swap-pane -U<return>"
+macro index,pager r, "!wm_action inpt r,<return>"
 # next
-macro index,pager r. "!tmux swap-pane -D<return>"
-
-# new session
-macro index,pager r_ "!tmux new-session<return>"
+macro index,pager r. "!wm_action inpt r.<return>"
 
 # new window
-macro index,pager rc "!tmux new-window<return>"
+macro index,pager rc "!wm_action inpt rc<return>"
 # kill pane
-macro index,pager rx "!tmux kill-pane<return>"
+macro index,pager rx "!wm_action inpt rx<return>"
 # last window
-macro index,pager rl "!tmux last-window<return>"
+macro index,pager rl "!wm_action inpt rl<return>"
 # split windows
-macro index,pager r/ "!tmux split-window -h<return>"
-macro index,pager r- "!tmux split-window<return>"
+macro index,pager r/ "!wm_action inpt r/<return>"
+macro index,pager r- "!wm_action inpt r-<return>"
 
 # break pane
-macro index,pager r! "!tmux break-pane<return>"
-#}}}
+macro index,pager r! "!wm_action inpt rbang<return>"
 
-# #s# is select#{{{
-# panes#{{{
-# directions
-macro index,pager sh "!tmux select-pane -L<return>"
-macro index,pager sn "!tmux select-pane -D<return>"
-macro index,pager se "!tmux select-pane -U<return>"
-macro index,pager si "!tmux select-pane -R<return>"
-# last
-macro index,pager sl "!tmux select-pane -l<return>"
-# select layout
-macro index,pager sv "!tmux select-layout main-vertical<return>"
-
-# toggle #monocle# (zoom)
-macro index,pager st "!tmux resize-pane -Z<return>"
-# bspwm monocle
-macro index,pager sm "!bspc desktop -l monocle && bspc window -t floating<return>"
+# take from old s<keys> bindings {{{
+# last pane
+macro index,pager ru "!wm_action inpt ru<return>"
+# zoomed pane toggle
+macro index,pager rk "!wm_action inpt rk<return>"
 # fullscreen
-macro index,pager sf "!bspc window -t fullscreen<return>"
+macro index,pager rf "!wm_action inpt rf<return>"
+# sticky
+macro index,pager ry "!wm_action inpt ry<return>"
+# main-vertical layout
+macro index,pager rv "!wm_action inpt rv<return>"
 
-#}}}
-
-# select session
-macro index,pager ss "!tmux choose-client<return>"
-#}}}
-#}}}
+# }}}
+# }}}
+# }}}
 # }}}
 
 # not in use
