Update .zshrc and .profile
- Update formatting and re-arrange things
- Update usage of &&s vs. ;s
- Clean up git aliases and remove [alias] section in .gitconfig
- Use "." instead of "source"
- Use underscores and lowercase for zsh options consistently
- Use wm_action script
- Use 'pkill -x' instead of randomly using pkill or killall
- Use just xsel instead of xsel and xclip
- Use single quotes for aliases unless variable needs to be expanded or in the case of nesting
- Add ix function (pastebin)
- Add vc compdef
- Add k aliases
- Add system info and group related functions
- Remove of exports (already in profile)
- Remove "xless" stuff
- Remove .navigation.zsh
- Remove "dissolve" section
- Remove old xscreensaver stuff
- Remove some other unused functions
- Remove reversed keyboard xmodmap stuff
- Remove screenshot alias
- Other changes/additions

--- a/common/.gitconfig
+++ b/common/.gitconfig
@@ -7,11 +7,7 @@
 	# will detect with git diff
 	# will warn or fix --whitespace=(warn|fix) with apply and rebase
 	whitespace = trailing-space,space-before-tab
-[alias]
-	co = checkout
-	br = branch
-	last = log -1 HEAD
-	# http://fredkschott.com/post/2014/02/git-log-is-so-2005/
-	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr)%C(bold blue)<%an>%Creset' --abbrev-commit
 [color]
 	ui = true
+[push]
+	default = simple
