Mention OpenNIC in resolv.conf

--- a/root/etc/resolv.example.conf
+++ b/root/etc/resolv.example.conf
@@ -1,3 +1,6 @@
+# closest OpenNIC servers
+# nameserver xxxx
+
 # http://freedns.zone/en/
 # freedns primary (no logging or censorship/blocking)
 nameserver 37.235.1.174
