--- a/media/.mpv/input.conf
+++ b/media/.mpv/input.conf
@@ -174,8 +174,8 @@ b run "/bin/sh" "-c" "echo ${=time-pos} > ~/Move/gif/end_time.txt &" ; set ab-lo
 c set ab-loop-a no
 # sets a, b, then clears
 # g ab_loop
-G cycle pause ; run "/bin/sh" "-c" "echo '${path}' > ~/Move/gif/filepath.txt" ; run /home/angelic_sedition/bin/mpv/ffcut ${path}
-SPACE-G cycle pause ; run "/bin/sh" "-c" "echo '${path}' > ~/Move/gif/filepath.txt" ; run /home/angelic_sedition/bin/mpv/ffcut make_gif ${path}
+G cycle pause ; run "/bin/sh" "-c" "echo '${path}' > ~/move/gif/filepath.txt" ; run ~/bin/mpv/ffcut ${path}
+SPACE-G cycle pause ; run "/bin/sh" "-c" "echo '${path}' > ~/move/gif/filepath.txt" ; run ~/bin/mpv/ffcut make_gif ${path}
 
 # }}}
 
