--- a/music/.abcde.conf
+++ b/music/.abcde.conf
@@ -9,8 +9,7 @@ ACTIONS=cddb,read,encode,tag,move,clean
 # ACTIONS=cddb,read,normalize,encode,tag,move,clean
 
 # Output dir
-# OUTPUTDIR='/run/media/angelic_sedition/Windows7/Users/Admin/Music/Winamp'
-OUTPUTDIR='/home/angelic_sedition/Music'
+OUTPUTDIR="$HOME/Music"
 
 # temp dir 
 WAVOUTPUTDIR='/tmp'
